# my_bgg

./: .gitignore  pyproject.toml
mybgg_django/: db.sqlite3  manage.py
mybgg_django/mybgg_django/: asgi.py  settings.py  urls.py  wsgi.py
