[tool.poetry]
name = "my-bgg"
version = "0.1.0"
description = ""
authors = ["Sergei Ezerskii <gaftezer@gmail.com>"]
readme = "README.md"
packages = [{include = "my_bgg"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
